# rust-synth

./: Cargo.toml  Notes.md
src/: lib.rs  main.rs
src/dsp/: mod.rs
src/gui/: mod.rs
src/midi/: mod.rs
src/synth/: mod.rs
